# osmgpsmap-rs

./: .gitignore  Cargo.toml  Gir-OsmGpsMap.toml  Gir.toml  Makefile  README.md
examples/: basic.rs  google.rs
gir-files/: GLib-2.0.gir  GObject-2.0.gir  Gdk-3.0.gir  OsmGpsMap-1.0.gir
osmgpsmap-sys/: Cargo.toml  README.md  build.rs
osmgpsmap-sys/src/: lib.rs
osmgpsmap-sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/: lib.rs
src/auto/: constants.rs  enums.rs  map.rs  map_image.rs  map_layer.rs  map_osd.rs  map_point.rs  map_polygon.rs  map_track.rs  mod.rs  versions.txt
