[package]
authors = ["Eric Trombly <etrombly@gmail.com>"]
description = "Rust library for OsmGpsMap-1.0"
license = "MIT"
keywords = ["openstreetmap", "gtk", "map", "widget"]
name = "osmgpsmap"
readme = "README.md"
repository = "https://github.com/etrombly/osmgpsmap-rs"
version = "0.2.13"

[dependencies]
gdk = "0.11.0"
gdk-pixbuf = "0.7.0"
glib = "0.8.2"
glib-sys = "0.9.0"
gobject-sys = "0.9.0"
gtk = "0.7.0"
gtk-sys = "0.9.0"
libc = "0.2.64"
osmgpsmap-sys = "0.2.12"

[dependencies.cairo-rs]
version = "0.7.1"
features = ["use_glib"]

[dev-dependencies]
gio = "0.7.0"
