[package]
authors = ["Eric Trombly <etrombly@gmail.com>"]
description = "Rust library for OsmGpsMap-1.0"
license = "MIT"
keywords = ["openstreetmap", "gtk", "map", "widget"]
name = "osmgpsmap"
readme = "README.md"
repository = "https://github.com/etrombly/osmgpsmap-rs"
version = "0.2.14"

[dependencies]
gdk = "0.12.1"
gdk-pixbuf = "0.8.0"
glib = "0.9.3"
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
gtk = "0.8.1"
gtk-sys = "0.9.2"
libc = "0.2.71"
osmgpsmap-sys = "0.2.14"

[dependencies.cairo-rs]
version = "0.8.1"
features = ["use_glib"]

[dev-dependencies]
gio = "0.8.1"
