[package]
authors = ["Eric Trombly <etrombly@gmail.com>"]
description = "Rust library for OsmGpsMap-1.0"
license = "MIT"
keywords = ["openstreetmap", "gtk", "map", "widget"]
name = "osmgpsmap"
readme = "README.md"
repository = "https://github.com/etrombly/osmgpsmap-rs"
version = "0.2.16"

[dependencies]
gdk = "0.13.2"
gdk-pixbuf = "0.9.0"
glib = "0.10.3"
glib-sys = "0.10.1"
gobject-sys = "0.10.0"
gtk = "0.9.2"
gtk-sys = "0.10.0"
libc = "0.2.80"
osmgpsmap-sys = "0.2.16"
atk-sys = "0.10.0"

[dependencies.cairo-rs]
version = "0.9.1"
features = ["use_glib"]

[dev-dependencies]
gio = "0.9.1"
