[package]
name = "osmgpsmap-sys"
description = "ffi bindings for osmgpsmap"
license = "MIT OR Apache-2.0"
authors = ["Eric Trombly"]
version = "0.2.10"
links = "osm_gps_map"
build = "build.rs"
edition = "2018"

[lib]
name = "osm_gps_map_sys"

[dependencies]
libc = "0.2"
glib-sys = "0.9.0"
gobject-sys = "0.9.0"
gtk-sys = "0.9.0"
cairo-sys-rs = "0.9.0"
gdk-sys = "0.9.0"
gdk-pixbuf-sys = "0.9.0"

[build-dependencies]
pkg-config = "0.3.7"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []

["package.metadata.docs.rs"]
features = ["dox"]
